# slp-src

robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: HybridPoseArray.msg
slp-msgs/: CMakeLists.txt  package.xml
slp-msgs/action/: Slp.action
slp-msgs/msg/: Action.msg  Command.msg  POIArray.msg
slp-ros/: CMakeLists.txt  package.xml
slp-ros/config/: transforms.yaml
slp-ros/launch/: all.launch  joint_state_pub.launch  utils.launch  virtual_camera.launch
slp-ros/nodes/: detector  mover_server  parser  pc_publish  planner  poi  rviz_manager  simulator  static_publisher  tracker
slp-ros/rviz/: simu.rviz
slp-ros/src/: jacob.cpp
slp-ros/urdfs/: panda.urdf  panda_arm_hand.urdf
