<?xml version="1.0"?>
<package format="2">
    <name>robot_msgs</name>
    <version>1.0.0</version>

    <description>Message definition for a panda controller.</description>
    <maintainer email="jane.doe@example.com">Jane Doe</maintainer> 
    <license>MIT</license>
    <author email="jane.doe@example.com">Jane Doe</author> 

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>  
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
