<?xml version="1.0"?>
<package>
  <name>slp_msgs</name>
  <version>0.1.0</version>
  <description>High-level messages for the SLP project</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer> 
  <license>MIT</license>
  <author email="jane.doe@example.com">Jane Doe</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_msgs</run_depend>

</package>
